--- a/StudentHub/Client/wwwroot/index.html
+++ b/StudentHub/Client/wwwroot/index.html
@@ -10,6 +10,8 @@
     <link href="css/app.css" rel="stylesheet"/>
     <link href="favicon.png" rel="icon" type="image/png"/>
     <link href="StudentHub.Client.styles.css" rel="stylesheet"/>
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet"/>
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
 
 <body>
