ready for review

--- a/StudentHub/Client/wwwroot/index.html
+++ b/StudentHub/Client/wwwroot/index.html
@@ -12,6 +12,9 @@
     <link href="StudentHub.Client.styles.css" rel="stylesheet"/>
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet"/>
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <script src="_content/Syncfusion.Blazor.PdfViewer/scripts/syncfusion-blazor-pdfviewer.min.js" type="text/javascript"></script>
 </head>
 
 <body>
